--- a/manifest.json
+++ b/manifest.json
@@ -1,5 +1,5 @@
 {
-  "name": "Точные времена намаза",
+  "name": "Намаз",
   "short_name": "Намаз",
   "start_url": "/",
   "display": "standalone",
@@ -7,12 +7,12 @@
   "theme_color": "#0d5e3f",
   "icons": [
     {
-      "src": "icons/icon-192x192.png",
+      "src": "icons/icon-192.png",
       "sizes": "192x192",
       "type": "image/png"
     },
     {
-      "src": "icons/icon-512x512.png",
+      "src": "icons/icon-512.png",
       "sizes": "512x512",
       "type": "image/png"
     }
