--- a/manifest.json
+++ b/manifest.json
@@ -1,20 +1,27 @@
 {
   "name": "Намаз",
   "short_name": "Намаз",
-  "start_url": "/",
+  "description": "Точные времена намаза с утренними и вечерними азкарами",
+  "start_url": "/index.html",
   "display": "standalone",
   "background_color": "#051a12",
   "theme_color": "#0d5e3f",
+  "orientation": "portrait-primary",
   "icons": [
     {
       "src": "icons/icon-192.png",
       "sizes": "192x192",
-      "type": "image/png"
+      "type": "image/png",
+      "purpose": "any maskable"
     },
     {
       "src": "icons/icon-512.png",
       "sizes": "512x512",
-      "type": "image/png"
+      "type": "image/png",
+      "purpose": "any maskable"
     }
-  ]
+  ],
+  "categories": ["lifestyle", "productivity", "utilities"],
+  "lang": "ru",
+  "dir": "ltr"
 }
